[package]
name = "scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
env_logger = "0.10"
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "runtime-tokio-native-tls", "postgres", "uuid", "time" ] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
